--- a/index.html
+++ b/index.html
@@ -3,38 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>The Best Anime of 2023</h1>
-    <h2>The Top 3 Anime</h2>
-    <hr/>
-    <h3>Attack on Titan</h3>
-    <p>The Best release of the climax</p>
-    <h3>Jujutsu Kaisen</h3>
-    <p>Gojo vs Sukuna most anticipated right now.</p>
-    <h3>One peice</h3>
-    <p>The hype is back with newest arc</p>
-    <hr/>
-    <h1>It's My Birthday!</h1>
-    <h2>On the 14th August</h2>
-
-    <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-      alt="purple birthday cake with candles" />
-
-    <h3>What to bring:</h3>
-    <ul>
-      <li>Baloons (I love baloons)</li>
-      <li>Cake (I'm really good at eating)</li>
-      <li>An appetite (There will be lots of food)</li>
-    </ul>
-
-    <h3>This is where you need to go:</h3>
-    <a
-      href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
-      map link</a>
-      <hr/>
-      <a href="./public/contact.html"> Contact Me</a>
-      <a href="./public/about.html">About Me</a>
+  <h1>Shreyas Kodte</h1>
+  <h2>Python Developer</h2>
+  <h2>Web Developer</h2>
+  <h2>Cybersecurity Enthusiast</h2>
+  
+  <hr/>
+  <h3>Education</h3>
+  <ol>
+    <li><p>B.Tech in Electronics and Communication from VIT Vellore.</p></li>
+  </ol>  
+  
+  <hr/>
+  <h3>Projects</h3>
+    <ol>
+      <p>Discord Bot using Python API. <br/>The bot has music playing capabilities and Hosted on Replit. Currently has no DB.</p>
+    </ol>
+  <hr/>
+  <a href="./public/contact.html"> Contact Me</a>
+  <a href="./public/about.html">About Me</a>
 </body>
 </html>
