--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,8 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
+<p>Tel: +91-8788117869</p>
 <p>Email: shreyaskodte@gmail.com</p>
 <p>Address: </p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Nashik<br />
+  India <br />
 </p>
