--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <h1>Shreyas Kodte</h1>
+  <h1 id="name">Shreyas Kodte</h1>
   <h2>Python Developer</h2>
   <h2>Web Developer</h2>
   <h2>Cybersecurity Enthusiast</h2>
@@ -15,13 +16,19 @@
   <h3>Education</h3>
   <ol>
     <li><p>B.Tech in Electronics and Communication from VIT Vellore.</p></li>
+    <li>HSC in Nashik Presidency Jr. College</li>
+    <li>SSC in Symbiosis School</li>
   </ol>  
   
   <hr/>
+  <h3>Internship</h3>
+  <h4>R&D Intern at TDK India Pvt. Ltd. </h4>
+  <p>Developed a Data Logger device to acquire test setup data using Arduino</p>
+  <hr/>
   <h3>Projects</h3>
-    <ol>
+    <ul>
       <p>Discord Bot using Python API. <br/>The bot has music playing capabilities and Hosted on Replit. Currently has no DB.</p>
-    </ol>
+    </ul>
   <hr/>
   <a href="./public/contact.html"> Contact Me</a>
   <a href="./public/about.html">About Me</a>
